--- a/internal/templates/index.html
+++ b/internal/templates/index.html
@@ -61,7 +61,9 @@
         <input type="submit" value="Predict">
     </form>
 
-    <div></div>
+    <div>
+        <span> {{response}} </span>
+    </div>
 
 </body>
 </html>
